// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation option dart-sass: errors 1`] = `Array []`;

exports[`implementation option dart-sass: warnings 1`] = `Array []`;

exports[`implementation option node-sass: errors 1`] = `Array []`;

exports[`implementation option node-sass: warnings 1`] = `Array []`;

exports[`implementation option not specify: errors 1`] = `Array []`;

exports[`implementation option not specify: warnings 1`] = `Array []`;

exports[`implementation option should not swallow an error when trying to load a sass implementation 1`] = `
[Error: Module build failed (from ../src/cjs.js):
Some error]
`;

exports[`implementation option should throw an error on an unknown sass implementation 1`] = `
[Error: Module build failed (from ../src/cjs.js):
Error: Unknown Sass implementation "strange-sass".
    at ReplacedStackEntry
    at ReplacedStackEntry]
`;

exports[`implementation option should throw an error when the "info" is unparseable #2 1`] = `
[Error: Module build failed (from ../src/cjs.js):
Error: Node Sass version 1 is incompatible with ^4.0.0 || ^5.0.0.
    at ReplacedStackEntry
    at ReplacedStackEntry]
`;

exports[`implementation option should throw an error when the "info" is unparseable 1`] = `
[Error: Module build failed (from ../src/cjs.js):
Error: Unknown Sass implementation "asdfj".
    at ReplacedStackEntry
    at ReplacedStackEntry]
`;

exports[`implementation option should throw an error when the "node-sass" package is an incompatible version 1`] = `
[Error: Module build failed (from ../src/cjs.js):
Error: Node Sass version 3.0.0 is incompatible with ^4.0.0 || ^5.0.0.
    at ReplacedStackEntry
    at ReplacedStackEntry]
`;

exports[`implementation option should throw an error when the "sass" package is an incompatible version 1`] = `
[Error: Module build failed (from ../src/cjs.js):
Error: Dart Sass version 1.2.0 is incompatible with ^1.3.0.
    at ReplacedStackEntry
    at ReplacedStackEntry]
`;

exports[`implementation option should throw error when the "info" does not exist 1`] = `
[Error: Module build failed (from ../src/cjs.js):
Error: Unknown Sass implementation.
    at ReplacedStackEntry
    at ReplacedStackEntry]
`;
